--- a/artists.html
+++ b/artists.html
@@ -260,17 +260,9 @@
             </div>
           </nav>
         </div>
-        <div class="body-right-section bg-dark text-white mt-2 p-4">
+        <div class="body-right-section bg-dark text-white mt-2 p-4" id="body-right">
           <div class="hero d-flex position-relative p-4 align-items-end" id="artistHero">
-
-            <div class="content-hero ps-2">
-              <p class="mb-0"><i class="bi bi-check-circle-fill me-2"></i>Artista verificato</p>
-              <p class="playlist-name display-2 fw-bold" id="playlistName">
-                Nome artista
-              </p>
-              <p>
-                1000 ascoltatori mensili
-              </p>
+            <div class="content-hero ps-2" id="artistHeroDesc">
             </div>
           </div>
 
@@ -290,24 +282,6 @@
           </div>
 
           <div class="row row-single-tracks d-flex align-items-center">
-            <div class="col">1</div>
-            <div class="col-5 d-flex">
-              <div>
-                <a href="#" class="text-decoration-none me-2"><img
-                    src="https://cdn.pixabay.com/photo/2014/04/07/20/45/abstract-318919_1280.jpg"
-                    class="img-fluid" /></a>
-              </div>
-              <div class="d-flex flex-column justify-content-center">
-                <p class="mb-0">
-                  <a href="#" class="text-decoration-none text-white">Emozioni</a>
-                </p>
-                <p class="my-0">
-                  <a href="#" class="text-decoration-none text-secondary">Artista</a>
-                </p>
-              </div>
-            </div>
-            <div class="col-5"><a href="#" class="text-white text-decoration-none">Album #1</a></div>
-            <div class="col">4:00</div>
           </div>
 
           <div class="row" id="row-disc-title">
@@ -442,10 +416,12 @@
       class="row player-section text-white position-absolute w-100 bottom-0 text-center align-items-center p-2 px-4">
       <div class="col-3">
         <div class="dettagli-brano d-flex align-items-center">
-          <a class="img-preview-player dynamic-content text-decoration-none me-2" href="#">Immagine</a>
+          <a class="img-preview-player dynamic-content text-decoration-none me-2" href="#">
+            <img src="" alt="" id="currentTrackImage" class="img-fluid">
+          </a>
           <div class="details-preview-player dynamic-content">
-            <p class="my-0 text-start">Nome brano</p>
-            <p class="my-0">Nome artista</p>
+            <p class="my-0 text-start" id="playerTrackName">Nome brano</p>
+            <p class="my-0" id="playerArtistName">Nome artista</p>
           </div>
           <div class="icon-preview-player">
             <i class="bi bi-check-circle-fill ms-4"></i>
@@ -453,7 +429,7 @@
         </div>
       </div>
       <div class="col">
-        <audio controls>
+        <audio controls id="audioElement">
           <source src="" />
           Your browser does not support the audio element.
         </audio>
@@ -464,20 +440,10 @@
       </div>
     </div>
   </div>
-  <!-- <div id="header"></div>
-  <div id="popularTracks"></div>
-  <div id="discography"></div>
-  <div id="relatedArtists"></div>
-
-  <div id="audioPlayer">
-    <img id="currentTrackImage" src="" alt="Track image" style="width: 100px; height: 100px" />
-    <audio id="audioElement" controls>
-      Il tuo browser non supporta l'elemento audio.
-    </audio>
-  </div> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
   <script type="module" src="./dist/ts/artistPage.js"></script>
 </body>
 
