--- a/album.html
+++ b/album.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-4 left-section pe-0">
         <div class="first-container-left-section">
-          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
+          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4 rounded-3">
             <ul class="navbar-nav d-flex flex-column">
               <li>
                 <a href="./index.html" class="text-decoration-none greytext"><i
@@ -35,7 +35,7 @@
         </div>
         <div class="second-container-left-section mt-2">
           <div class="header-second-container-left-section">
-            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4">
+            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4 rounded-3">
               <ul class="navbar-nav">
                 <li>
                   <a href="#" class="text-decoration-none text-white"><i class="me-3 fs-4 bi bi-collection"></i>La tua
@@ -238,7 +238,7 @@
         </div>
       </div>
       <div class="col-8" id="right-section">
-        <div id="header-right-section" class="bg-dark position-sticky top-0">
+        <div id="header-right-section" class="bg-dark position-sticky top-0 rounded-3">
           <nav class="navbar navbar-expand-lg navbar-light text-white">
             <div class="container-fluid justify-content-between">
               <div class="row w-100 d-flex justify-content-between">
@@ -261,13 +261,13 @@
             </div>
           </nav>
         </div>
-        <div class="body-right-section bg-dark text-white mt-2 p-4" id="body-right">
+        <div class="body-right-section bg-dark text-white mt-2 p-4 rounded-3" id="body-right">
           <div class="hero d-flex position-relative" id="playlistTitle">
-            <a href="#" id="img-playlist-hero" class="p-2"></a>
+            <a href="#" id="img-playlist-hero" class="p-2 skeleton"></a>
             <div class="content-hero ps-2">
               <p class="mb-0">Album</p>
               <h2 class="playlist-name display-4 fw-bold" id="albumName">
-                Nome album
+                Caricamento...
               </h2>
               <p class="playlist-details" id="album-details">
               </p>
