--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <div class="row">
         <div class="col-4 left-section pe-0">
           <div class="first-container-left-section">
-            <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
+            <nav
+              class="navbar navbar-expand navbar-light bg-dark greytext p-4 rounded-3"
+            >
               <ul class="navbar-nav d-flex flex-column">
                 <li>
                   <a href="#" class="text-decoration-none text-white fw-bold"
@@ -47,7 +49,7 @@
           <div class="second-container-left-section mt-2">
             <div class="header-second-container-left-section">
               <nav
-                class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4"
+                class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4 rounded-3"
               >
                 <ul class="navbar-nav">
                   <li>
@@ -378,7 +380,10 @@
           </div>
         </div>
         <div class="col-8" id="right-section">
-          <div id="header-right-section" class="bg-dark position-sticky top-0">
+          <div
+            id="header-right-section"
+            class="bg-dark position-sticky top-0 rounded-3"
+          >
             <nav class="navbar navbar-expand-lg navbar-light text-white">
               <div class="container-fluid justify-content-between">
                 <div class="row w-100 d-flex justify-content-between">
@@ -413,18 +418,15 @@
               </div>
             </nav>
           </div>
-          <div class="body-right-section bg-dark text-white mt-2 p-4">
+          <div class="body-right-section bg-dark text-white mt-2 p-4 rounded-3">
             <div class="hero d-flex position-relative" id="playlistTitle">
-              <a href="#" id="img-playlist-hero" class="p-2"></a>
+              <a href="#" id="img-playlist-hero" class="p-2 skeleton"></a>
               <div class="content-hero ps-2">
                 <p class="mb-0">Playlist</p>
                 <h2 class="playlist-name display-4 fw-bold" id="playlistName">
-                  Nome playlist
+                  Caricamento...
                 </h2>
-                <p class="playlist-description" id="playlistDesc">
-                  Descrizione playlist Descrizione playlist Descrizione playlist
-                  Descrizione playlist Descrizione playlist Descrizione playlist
-                </p>
+                <p class="playlist-description" id="playlistDesc"></p>
                 <button
                   class="btn bg-success rounded-pill me-2 px-4 py-2"
                   id="playBtn"
@@ -454,7 +456,7 @@
             <div class="playlist-sub-hero-container row mt-4">
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -470,7 +472,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -486,7 +488,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -502,7 +504,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -520,7 +522,7 @@
             <div class="playlist-sub-hero-container row mt-4">
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -536,7 +538,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -552,7 +554,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -568,7 +570,7 @@
               </div>
               <div class="col-lg-3 col-6">
                 <div
-                  class="playlist-sub-hero-single d-flex align-items-center text-danger me-4"
+                  class="playlist-sub-hero-single d-flex align-items-center me-4"
                 >
                   <a
                     href="#"
@@ -595,10 +597,7 @@
               </div>
             </div>
 
-            <div
-              class="second-row-big-playlists text-danger row"
-              id="playlist2"
-            >
+            <div class="second-row-big-playlists row" id="playlist2">
               <div
                 class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center"
               >
@@ -609,10 +608,7 @@
               </div>
             </div>
 
-            <div
-              class="second-row-big-playlists text-danger row"
-              id="playlist3"
-            >
+            <div class="second-row-big-playlists row" id="playlist3">
               <div
                 class="col-12 d-flex justify-content-between mt-4 mb-3 align-items-center"
               >
