--- a/searchPage.html
+++ b/searchPage.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-4 left-section pe-0">
         <div class="first-container-left-section">
-          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4">
+          <nav class="navbar navbar-expand navbar-light bg-dark greytext p-4 rounded-3">
             <ul class="navbar-nav d-flex flex-column">
               <li>
                 <a href="./index.html" class="text-decoration-none greytext"><i class="me-4 fs-4 bi bi-house"></i>Home</a>
@@ -33,7 +33,7 @@
         </div>
         <div class="second-container-left-section mt-2">
           <div class="header-second-container-left-section">
-            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4">
+            <nav class="navbar navbar-expand navbar-light text-white justify-content-between bg-dark p-4 rounded-3">
               <ul class="navbar-nav">
                 <li>
                   <a href="#" class="text-decoration-none text-white"><i class="me-3 fs-4 bi bi-collection"></i>La tua
@@ -236,7 +236,7 @@
         </div>
       </div>
       <div class="col-8" id="right-section">
-        <div id="header-right-section" class="bg-dark position-sticky top-0">
+        <div id="header-right-section" class="bg-dark position-sticky top-0 rounded-3">
           <nav class="navbar navbar-expand-lg navbar-light text-white">
             <div class="container-fluid justify-content-between">
               <div class="row w-100 d-flex justify-content-between">
@@ -259,12 +259,12 @@
             </div>
           </nav>
         </div>
-        <div class="body-right-section bg-dark text-white mt-2 p-4" id="body-right">
+        <div class="body-right-section bg-dark text-white mt-2 p-4 rounded-3" id="body-right">
 
           <div class="row" id="search-history">
             <p class="h3 text-white">Risultato più rilevante</p>
             <div class="col-6">
-              <div class="big-playlist-single-container lighterbg p-3" id="topResult">
+              <div class="big-playlist-single-container lighterbg p-3 skeleton" id="topResult">
                 <!-- <a href="#"><img src="" class="img-fluid rounded-circle" /></a>
                 <p class="mb-1 mt-1 fs-2 lh-1">Nome artista</p>
                 <p class="text-secondary mb-0">Artista</p> -->
